--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,16 @@
 <resources>
     <!-- App data strings -->
-    <string name="app_name">Food Wikipedia</string>
-    <string name="version_code">1.0</string>
+    <string name="app_name" translatable="false">Food Wikipedia</string>
+    <string name="version_code" translatable="false">1.0</string>
 
-    <string name="gmail">krupkoilla4@gmail.com</string>
+    <string name="gmail" translatable="false">krupkoilla4@gmail.com</string>
 
 
     <!-- Label strings -->
     <string name="about_label">About</string>
     <string name="settings_label">Settings</string>
     <string name="category_label">Category</string>
+    <string name="menu_label">Menu</string>
 
 
     <!-- Header screen's button's strings -->
@@ -19,7 +20,7 @@
 
     <!-- About screen's strings -->
     <string name="about_app_name">Application name: %s</string>
-    <string name="about_version_code">Version code: %s</string>
+    <string name="about_version_code">Version: %s</string>
     <string name="github_link">Project link: <a href="https://github.com/ughsxl/FoodWikipedia">https://github.com/ughsxl/FoodWikipedia</a></string>
     <string name="send_feedback">Send feedback</string>
     <string name="thanks_to_label">Thanks to</string>
@@ -33,9 +34,9 @@
     <string name="dark_theme_radio_button">Dark</string>
 
     <string name="language_label">Language</string>
-    <string name="english_language">English</string>
-    <string name="russian_language">Russian</string>
-    <string name="ukrainian_language">Ukrainian</string>
+    <string name="english_language" translatable="false">English</string>
+    <string name="russian_language" translatable="false">Русский</string>
+    <string name="ukrainian_language" translatable="false">Українська</string>
 
     
     <!-- Category screen strings -->
@@ -48,7 +49,6 @@
 
     <string name="carbs_value">Carbs: %s</string>
     <string name="protein_value">Protein: %s</string>
-    <string name="fats_value">Fats: %s</string>
     <string name="calories_value">Calories: %s</string>
     <string name="fiber_value">Fiber: %s</string>
     <string name="sugar_value">Sugar: %s</string>
@@ -77,7 +77,6 @@
     <string name="pick_label">Pick</string>
     <string name="first_pick_category_toast">First pick a category</string>
     <string name="an_error_occurred_toast">An error occurred</string>
-    <string name="exit_settings_to_make_the_theme_apply_toast">Exit the settings to make the theme apply correctly</string>
 
 
     <!-- Food categories list -->
@@ -92,5 +91,7 @@
         <item>Nuts</item>
         <item>Herbs &amp; Spices</item>
     </string-array>
+
+    <string name="fats_value">Fats: %s</string>
 
 </resources>
