change language logic entirely implemented

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -71,10 +71,10 @@
         <item>Овощи</item>
         <item>Фрукты</item>
         <item>Мясо и Речная Рыба</item>
-        <item>Молодчные продукты</item>
+        <item>Молочные продукты</item>
         <item>Крупы</item>
         <item>Бобовые</item>
-        <item>Морская еда</item>
+        <item>Морепродукты</item>
         <item>Орехи</item>
         <item>Травы и Специи</item>
     </string-array>
