--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="version_code" translatable="false">1.0</string>
 
     <string name="gmail" translatable="false">krupkoilla4@gmail.com</string>
-    <string name="privacy_policy_link" translatable="false">http://food-wikipedia-privacy-policy.tilda.ws/</string>
+    <string name="privacy_policy_link" translatable="false">https://ughsxl.github.io/foodwikipedia-privacy-policy/</string>
 
 
     <!-- Label strings -->
@@ -84,14 +84,14 @@
 
     <!-- Food categories list -->
     <string-array name="categories_list">
-        <item>Vegetables</item>
-        <item>Fruits</item>
-        <item>Meat &amp; Freshwater Fish</item>
         <item>Dairy</item>
+        <item>Fruits</item>
         <item>Grains</item>
-        <item>Legumes</item>
-        <item>Seafood</item>
-        <item>Nuts</item>
         <item>Herbs &amp; Spices</item>
+        <item>Legumes</item>
+        <item>Meat &amp; Freshwater Fish</item>
+        <item>Nuts</item>
+        <item>Seafood</item>
+        <item>Vegetables</item>
     </string-array>
 </resources>
